--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -9,6 +9,9 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 /**************preloader****************/
+.wrapper {
+    height: 100vh;
+}
 .preloader { 
     position: fixed;
     top: 0;
@@ -62,7 +65,7 @@ body {
         transition: 1s;
         &:hover {
             color: #ffffff;
-            text-decoration: underline;
+            transform: scale(1.2);
         }
     }
 }
@@ -86,10 +89,28 @@ body {
             list-style: none;
             display: inline-block;
             a {
-                color: #fff;
+                position: relative;
+                display: inline-block;
+                overflow: hidden;
+                color: #B3C4CA;
                 font-size: 16px;
                 margin: 0 0 0 20px;
-                
+                &:hover span:nth-child(1) {
+                    right: 100%;
+                    transition: 2s;
+                }
+               span {
+                    position: absolute;
+                    display: block;
+                    
+                    &:nth-child(1) {
+                        bottom: 0;
+                        right: -100%;
+                        width: 100%;
+                        height: 5px;
+                        background: linear-gradient(270deg, transparent, #6868B3);
+                    }
+                }
         
             }
         }
@@ -336,13 +357,13 @@ body {
                     }
                 }
             }
-        }
-        .card:hover .inner-text {
-            color: #272B36;
-        }
-        .card:hover .percent .number h2 {
-            color: #B5C8CE;
-            font-size: 50px;
+            &:hover .inner-text {
+                color: #272B36;
+            }
+            &:hover .percent .number h2 {
+                color: #B5C8CE;
+                font-size: 50px;
+            }
         }
         &:hover .card {
             position: absolute;
