--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -57,7 +57,7 @@ body {
 /**************header****************/
 .sticky {
     padding: 30px 0;
-    background: #C2D5DB;
+    background: $secondary-color;
     opacity: 0.9;
     filter: drop-shadow(rgba(120, 159, 188, 0.5) 0px 8px 10px);
     .header-links {
@@ -115,7 +115,6 @@ body {
             }
         }
     }
-    
 }
 /**************parallax****************/
 .hero {
@@ -145,7 +144,7 @@ body {
         width: 100%;
         height: 100px;
         z-index: 99;
-        background: linear-gradient(transparent, #455662);
+        background: linear-gradient(transparent, $bg-color);
     }
     &-mountain-one {
         position: absolute;
@@ -176,7 +175,7 @@ body {
 .about {
     width: 100%;
     height: 100vh;
-    background: #445561;
+    background: $bg-color;
     &-line {
         padding: 25px 0 0 0;
         display: flex;
@@ -200,7 +199,7 @@ body {
                 polygon {
                     fill: transparent;
                     stroke-width: 10;
-                    stroke: #C2D5DB;
+                    stroke: $secondary-color;
                     stroke-dasharray: 650;
                     stroke-dashoffset: 0; 
                 }
@@ -254,9 +253,8 @@ body {
     align-items: center;
     width: 100%;
     height: 100vh;
-    background: #455662;
+    background: $bg-color;
     &-text {
-        background: #455662;
         align-self: start;
         &-h2 {
             text-align: center;
@@ -275,9 +273,9 @@ body {
             top: calc(55% - 200px);
             left: 30%;
             transform: translate(-50%,calc(100px * var(--i))) rotate(40deg) skew(-20deg,-10deg);
-            width: 300px;
-            height: 400px;
-            background: #C2D5DB;
+            width: 200px;
+            height: 300px;
+            background: $secondary-color;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -293,6 +291,9 @@ body {
             }
             &:nth-child(3) {
                 opacity: 0.6;
+            }
+            &:nth-child(4) {
+                opacity: 0.4;
             }
             &:nth-child(1) svg circle:nth-child(2) {
                 stroke: #DD4B25;
@@ -401,6 +402,192 @@ body {
         stroke-dasharray: 440;
         stroke-dashoffset: 440;
     }
+}
+
+.projects {
+    padding: 0 32px 48px;
+    background: $bg-color;
+    z-index: 4;
+    &-title {
+        width: 100%;
+        margin: 0;
+        padding: 32px 0 16px;
+        color: green;
+        font-size: 40px;
+        font-weight: 400;
+        text-align: center;
+        text-transform: uppercase;
+    }
+    &-description {
+        max-width: 65%;
+        margin: 0 auto 32px;
+        color: #382266;
+        font-size: 20px;
+        font-weight: 300;
+        text-align: center;
+      }
+    &-nav {
+        max-width: 1024px;
+        margin: 0 auto 10px;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        background-color: #cccccc;
+        &-btn {
+            width: 128px;
+            margin: 18px 13px 13px;
+            padding: 0 5px 4px;
+            background-color: transparent;
+            color: #fff;
+            font-size: 18px;
+            font-weight: 400;
+            text-align: center;
+            border: none;
+            position: relative;
+            &:before {
+                content: "";
+                position: absolute;
+                top: -13%;
+                left: 50%;
+                transform: translateX(-50%);
+                border-width: 0;
+                border-style: solid;
+                border-color: #fff;
+                width: 128px;
+                height: 115%;
+                transition: all 0.3s linear;
+                border-top-width: 2px;
+                border-left-width: 2px;
+            }
+            &:after {
+                content: "";
+                position: absolute;
+                top: -13%;
+                left: 50%;
+                transform: translateX(-50%);
+                border-width: 0;
+                border-style: solid;
+                border-color: #fff;
+                width: 128px;
+                height: 115%;
+                transition: all 0.3s linear;
+                border-bottom-width: 2px;
+                border-right-width: 2px;
+            }
+            &:hover.projects-nav-btn:before{
+                width: 70%;
+                height: 0%;
+            }
+            &:hover.projects-nav-btn:after {
+                width: 70%;
+                height: 0%;   
+            }
+            &:hover.projects-nav-btn:after {
+                top: 100%;
+              }
+          }
+      }
+      &-items {
+        max-width: 1024px;
+        margin: 0 auto;
+        background: $bg-color;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        overflow: hidden;
+        .projects-item {
+            display: block;
+            margin: 20px 25px;
+            width: 400px;
+            background-color: #7078a9;
+            position: relative;
+            overflow: hidden;
+            &-info {
+                margin: 3px 0 8px;
+                color: #fff;
+                font-size: 20px;
+                font-weight: 300;
+                text-align: center;
+              }
+            &-thumbnail {
+                width: 100%;
+                height: 400px;
+                border-bottom: 1px solid #cfd2e2;
+                transform: translateY(0%);
+                transition: all 1s linear;
+                z-index: 4;
+              }
+            &:hover .projects-item-thumbnail {
+                transform: scale(1.6) translateY(120%);
+                }
+            &:hover .projects-item-hover {
+                transform: translateY(0%);
+                }   
+            &-hover {
+                position: relative;
+                width: 100%;
+                height: 100%;
+                padding-top: 40px;
+                background: linear-gradient(to top, #C2D5DB 0%, #445561 100%);
+                position: absolute;
+                left: 0;
+                top: 0;
+                transform: translateY(-100%);
+                transition: all 0.6s linear;
+                text-align: center;
+                z-index: 3;
+                &:before {
+                    content: "";
+                    position: absolute;
+                    top: 32px;
+                    left: 24px;
+                    width: 0;
+                    height: 0;
+                    border-width: 0;
+                    border-top-width: 2px;
+                    border-left-width: 2px;
+                    border-style: solid;
+                    border-color: red;
+                    transition: all 1.5s linear;
+                  }
+                &:after {
+                    content: "";
+                    position: absolute;
+                    bottom: 72px;
+                    right: 24px;
+                    width: 0;
+                    height: 0;
+                    border-width: 0;
+                    border-bottom-width: 2px;
+                    border-right-width: 2px;
+                    border-style: solid;
+                    border-color: blue;
+                    transition: all 1.5s linear;
+                  }
+                  &-title {
+                    margin: 24px 0 0;
+                    color: #fff;
+                    font-size: 30px;
+                    font-weight: 400;
+                  }
+                  &-description {
+                    max-width: 70%;
+                    margin: 24px auto 0;
+                    color: #fff;
+                    font-size: 20px;
+                    font-weight: 300;
+                  }
+              }
+            &:hover .projects-item-hover:before {
+                width: 65%;
+                height: 45%; 
+            }   
+            &:hover .projects-item-hover:after {
+                width: 65%;
+                height: 45%;
+            }       
+        }
+      }
 }
 
 
