--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -13,6 +13,10 @@ body {
 .wrapper {
     height: 100vh;
 }
+.container {
+    max-width: 1440px;
+    margin: 0 auto;
+}
 .preloader { 
     position: fixed;
     top: 0;
@@ -74,7 +78,7 @@ body {
     width: 100%;
     position: fixed;
     transition: all 1s ease;
-    padding: 10px 0;
+    padding: 5px 0;
     z-index: 999;
     &-box {
         display: flex;
@@ -86,57 +90,71 @@ body {
             font-weight: 600;
             color: #cccccc;   
         }
-        &-menu li {
-            list-style: none;
-            display: inline-block;
-            a {
-                position: relative;
-                display: inline-block;
-                overflow: hidden;
-                color: #B3C4CA;
-                font-size: 16px;
-                margin: 0 0 0 20px;
-                &:hover span:nth-child(1) {
-                    right: 100%;
-                    transition: 2s;
-                }
-               span {
-                    position: absolute;
-                    display: block;
-                    
-                    &:nth-child(1) {
-                        bottom: 0;
-                        right: -100%;
-                        width: 100%;
-                        height: 5px;
-                        background: linear-gradient(270deg, transparent, #6868B3);
+        &-items {
+            display: flex;
+            justify-content: space-between;
+            width: 30%;
+            li {
+                list-style: none;
+                a {
+                    position: relative;
+                    display: inline-block;
+                    overflow: hidden;
+                    font-weight: bold;
+                    color: #B3C4CA;
+                    font-size: 16px;
+                    margin: 0 0 0 20px;
+                    &:hover span:nth-child(1) {
+                        right: 100%;
+                        transition: 2s;
                     }
+                   span {
+                        position: absolute;
+                        display: block;
+                        
+                        &:nth-child(1) {
+                            bottom: 0;
+                            right: -100%;
+                            width: 100%;
+                            height: 5px;
+                            background: linear-gradient(270deg, transparent, #6868B3);
+                        }
+                    }
+            
                 }
-        
             }
+        }
+        .burger {
+            display: none;
+            cursor: pointer;
+            div {
+                width: 25px;
+                height: 3px;
+                background: red;
+                margin: 5px;
+            } 
         }
     }
 }
+
 /**************parallax****************/
 .hero {
-    width: 100%;
-    min-height: 1000px;
     position: relative;
-    overflow: hidden;
     background: url(../img/marek-piwnicki-ooxzy4JN6gw-unsplash.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
+    overflow: hidden;
+
     .clouds {
         position: absolute;
         top: 0;
         left: 0;
-        width: 100%;
-        height: 100%;   
-        img {
-            position: absolute;
-            top: 0;
-            max-width: 100%;
-            animation: clouds 15s linear infinite;
-        }
+        height: 100%;
+        max-width: 100%; 
+        animation: clouds 15s linear infinite; 
+        
     }
     &:before {
         content: "";
@@ -147,56 +165,65 @@ body {
         z-index: 99;
         background: linear-gradient(transparent, $bg-color);
     }
-    &-mountain-one {
-        position: absolute;
-        right: 35%;
-        width: 100%;
-        transform: translateY(45%);
-        z-index: 9;
-        mix-blend-mode: luminosity;
-        
-    }
-    &-mountain-two {
-        position: absolute;
-        top: 15%;
-        width: 100%;
-        z-index: 10;
-        transform: translateX(30%);
-        mix-blend-mode: luminosity;
-    }
-    &-text {
-        position: absolute;
-        right: 0;
-        width: 100%;
-        transform: translateY(35%);
+    .parallax {
+        padding: 0 0 70% 0;
+        overflow: hidden;
+        position: relative;
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            position: absolute;
+
+        }
+        &-mountain-one {
+            right: 35%;
+            transform: translateY(25%);
+            z-index: 9;
+            mix-blend-mode: luminosity;
+            
+        }
+        &-mountain-two {
+            top: 15%;
+            z-index: 10;
+            transform: translateX(35%);
+            mix-blend-mode: luminosity;
+        }
+        &-text {
+            right: 0;
+            transform: translateY(30%);
+        }
+
     }
 
 }
 /**************about****************/
 .about {
-    width: 100%;
-    height: 100vh;
+    font-size: 24px;
+    padding: 0 32px 48px;
     background: $bg-color;
-    &-line {
-        padding: 25px 0 0 0;
+    &-title {
+        padding: 32px 0 16px;
         display: flex;
         justify-content: center;
-    }
-    &-content {
-        display: flex;
-        justify-content: space-around;
         align-items: center;
-        &-textbox {
-            margin: 80px 0 0 0;
-            flex: 0 0 800px;
-            position: relative;
+        text-transform: uppercase;
+        .h1 {
+            width: 20%;
+            text-align: center;
+            font-size: 40px;
+            font-weight: 400;
+            border-bottom: 2px solid red;
+        }
+    }
+    &-description {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0 80px 0 0;
             .icon {
                 width: 100px;
-                margin: 0 15px 60px 0;
-                position: absolute;
-                top: -5%;
-                left: 3%;
-
+                height: 100px;
                 polygon {
                     fill: transparent;
                     stroke-width: 10;
@@ -207,75 +234,74 @@ body {
                 &:hover polygon {
                     animation: icon-mount 2s linear forwards;
                 }
-            }
-            &-text {    
-             padding: 30px;
-             &-h3 {
-                 margin: 0 0 15px 100px;
-             }
-            }
-
-        }
-        
+            } 
     }
-    .rocket {
-        position: relative;
-        animation: rocket 0.2s ease infinite;
-        margin: 0 0 0 30px;
-        &:before {
-            content: "";
-            position: absolute;
-            bottom: -195px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 10px;
-            height: 200px;
-            background: linear-gradient(#00d0ff,transparent);
-            border-radius: 10px;
+    &-text {
+        display: flex; 
+        justify-content: center;
+        align-items: center;
+        padding: 50px 50px 80px;
+        .rocket {
+            align-self: start;
+            position: relative;
+            animation: rocket 0.2s ease infinite;
+            margin: 0 50px;
+            &:before {
+                content: "";
+                position: absolute;
+                bottom: -195px;
+                left: 50%;
+                transform: translateX(-50%);
+                width: 10px;
+                height: 200px;
+                background: linear-gradient(#1C97FF,transparent);
+                border-radius: 10px;
+            }
+            &:after {
+                content: "";
+                position: absolute;
+                bottom: -195px;
+                left: 50%;
+                transform: translateX(-50%);
+                width: 10px;
+                height: 200px;
+                background: linear-gradient(#1C97FF,transparent);
+                filter: blur(20px);
+            }
+            
         }
-        &:after {
-            content: "";
-            position: absolute;
-            bottom: -195px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 10px;
-            height: 200px;
-            background: linear-gradient(#00d0ff,transparent);
-            filter: blur(20px);
-        }
-        
     }
 }
 /**************skills**********/
 .skills {
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
     height: 100vh;
     background: $bg-color;
-    &-text {
-        align-self: start;
-        &-h2 {
-            text-align: center;
-            padding: 15px 0;
+        &-title {
+            padding: 32px 0 16px;
+            margin: 0 0 0 30px;
+            text-transform: uppercase;
+            .h1 {
+                width: 20%;
+                text-align: center;
+                font-size: 40px;
+                font-weight: 400;
+                border-bottom: 2px solid red;
+            }
         }
         p { 
             padding: 0 0 0 25px;
         }
-    }
     .container {
         position: relative;
-        width: 1100px;
-        height: 400px;
+        width: 100%;
+        height: 500px;
         .card {
             position: absolute;
             top: calc(55% - 200px);
-            left: 30%;
+            left: 50%;
             transform: translate(-50%,calc(100px * var(--i))) rotate(40deg) skew(-20deg,-10deg);
-            width: 200px;
-            height: 300px;
+            width: 150px;
+            height: 250px;
             background: $secondary-color;
             display: flex;
             justify-content: center;
@@ -286,15 +312,27 @@ body {
 
             &:nth-child(1) {
                 opacity: 1;
+                transition: 1.5s;
             }
             &:nth-child(2) {
                 opacity: 0.8;
+                transition: 2s;
             }
             &:nth-child(3) {
                 opacity: 0.6;
+                transition: 2.5s;
             }
             &:nth-child(4) {
                 opacity: 0;
+                transition: 3s;
+            }
+            &:nth-child(5) {
+                opacity: 0;
+                transition: 3.5s;
+            }
+            &:nth-child(6) {
+                opacity: 0;
+                transition: 4s;
             }
             &:nth-child(1) svg circle:nth-child(2) {
                 stroke: #DD4B25;
@@ -306,7 +344,19 @@ body {
             }
             &:nth-child(3) svg circle:nth-child(2) {
                 stroke: #E5A228;
-                stroke-dashoffset: calc(440 - (440 * 15) / 100);
+                stroke-dashoffset: calc(440 - (440 * 20) / 100);
+            }
+            &:nth-child(4) svg circle:nth-child(2) {
+                stroke: #171516;
+                stroke-dashoffset: calc(440 - (440 * 50) / 100);
+            }
+            &:nth-child(5) svg circle:nth-child(2) {
+                stroke: #634F96;
+                stroke-dashoffset: calc(440 - (440 * 40) / 100);
+            }
+            &:nth-child(6) svg circle:nth-child(2) {
+                stroke: #CA4545;
+                stroke-dashoffset: calc(440 - (440 * 35) / 100);
             }
             .content {
                 opacity: 0;
@@ -369,12 +419,12 @@ body {
         }
         &:hover .card {
             position: absolute;
-            top: 50%;
-            left: -20%;
+            top: 30%;
+            left: 25%;
             z-index: 1;
             opacity: 1;
             box-shadow: 0 25px 50px rgba(0,0,0,0.2);
-            transform: translate(calc(-140% + calc(250px * var(--i))),-30%) rotate(0deg) skew(0deg,0deg);
+            transform: translate(calc(-20% + calc(200px * var(--i))),-30%) rotate(0deg) skew(0deg,0deg);
         }
         &:hover .card .content {
             opacity: 1;
@@ -409,15 +459,20 @@ body {
     padding: 0 32px 48px;
     background: $bg-color;
     z-index: 4;
+    overflow: hidden;
     &-title {
-        width: 100%;
-        margin: 0;
         padding: 32px 0 16px;
-        color: #fff;
-        font-size: 40px;
-        font-weight: 400;
-        text-align: center;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
         text-transform: uppercase;
+        .h1 {
+            width: 20%;
+            text-align: center;
+            font-size: 40px;
+            font-weight: 400;
+            border-bottom: 2px solid red;
+        }
     }
     &-description {
         max-width: 65%;
@@ -488,7 +543,7 @@ body {
                     border-top-width: 2px;
                     border-left-width: 2px;
                     border-style: solid;
-                    border-color: red;
+                    border-color: #1F7D71;
                     transition: all 1.5s linear;
                   }
                 &:after {
@@ -502,7 +557,7 @@ body {
                     border-bottom-width: 2px;
                     border-right-width: 2px;
                     border-style: solid;
-                    border-color: blue;
+                    border-color: #990100;
                     transition: all 1.5s linear;
                   }
                   &-title {
@@ -580,6 +635,7 @@ body {
        
     }
 }
+
 ::-webkit-scrollbar {
     width: 12px;
     background: #B3C4CA;
@@ -587,4 +643,110 @@ body {
 ::-webkit-scrollbar-thumb {
     background: linear-gradient(transparent, #252934);
     border-radius: 6px;
+}
+@media screen and (max-width:1024px) {
+    .header-box-items {
+        width: 40%;
+    }
+}
+@media screen and (max-width:768px) {
+    .header-box-items {
+        position: absolute;
+        right: 0;
+        height: 92vh;
+        top: 9vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 40%;
+        padding: 40px 0;
+        transform: translateX(100%); 
+        transition: transform 0.5s ease-in;
+        li {
+            a {
+            color: red; 
+        } 
+    }
+    }
+    .header-box .burger {
+        display: block;
+    }
+    .header-active-bureger {
+        transform: translateX(0%);
+        animation: navLinkFade 0.7s linear;    
+    }
+    .sticky .header-box-items {
+        background: $secondary-color;
+    } 
+    .about {
+        padding: 120px 0 0 0;
+        &-title {
+            padding: 16px 0 8px;
+            .h1 {
+                width: 50%;
+            }
+        }
+        &-text {
+            padding: 40px 20px;
+            .text {
+                font-size: 20px;
+            }
+        }
+    }
+    .skills {
+        &-title {
+            .h1{
+                width: 50%;
+            }
+        }
+        p {
+            font-size: 20px;
+        }
+        .container {
+            overflow: hidden;
+            .card {
+            transform: translate(-50%,calc(50px * var(--i))) rotate(40deg) skew(-20deg,-10deg);
+            width: 100px;
+            height: 200px;
+            }
+            &:hover .card {
+                top: 30%;
+                left: 20%;
+                transform: translate(calc(-20% + calc(101px * var(--i))),-30%) rotate(0deg) skew(0deg,0deg);
+            }
+            .percent {
+                width: 100px;
+                height: 100px;
+            }
+        }
+    }
+    .projects {
+        padding: 40px 16px 24px;
+        &-title {
+            padding: 16px 0 30px;
+            .h1 {
+                width: 50%;
+            }
+        }
+        &-description {
+            max-width: 75%
+        }
+        &-items {
+            .projects-item {
+                max-width: 300px;
+                max-height: 400px;
+            }
+        }
+    }
+
+    @keyframes navLinkFade {
+        from {
+            opacity: 0;
+            transform: translateX(50px);
+        }
+        to {
+            opacity: 1;
+            transform: translateX(0px);
+        }
+    }
 }
