--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -200,7 +200,7 @@ body {
 /**************about****************/
 .about {
     font-size: 24px;
-    padding: 0 32px 48px;
+    padding: 15px 32px 48px;
     background: $bg-color;
     &-title {
         padding: 32px 0 16px;
@@ -276,6 +276,7 @@ body {
 .skills {
     height: 100vh;
     background: $bg-color;
+    padding: 15px 0 0 0;
         &-title {
             padding: 32px 0 16px;
             margin: 0 0 0 30px;
@@ -456,7 +457,7 @@ body {
 }
 
 .projects {
-    padding: 0 32px 48px;
+    padding: 15px 32px 48px;
     background: $bg-color;
     z-index: 4;
     overflow: hidden;
