--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -586,6 +586,32 @@ body {
         }
       }
 }
+.footer {
+    padding: 15px 0 0 0;
+    background: #131925;
+    &-title {
+        padding: 32px 0 16px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-transform: uppercase;
+        .h1 {
+            width: 20%;
+            text-align: center;
+            font-size: 40px;
+            font-weight: 400;
+            border-bottom: 2px solid red;
+        }
+    }
+    &-description {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+            .h2 {
+                font-size: 25px;
+            }
+        }
+}
 
 
 /**************animation****************/
