--- a/#src/scss/var.scss
+++ b/#src/scss/var.scss
@@ -1,4 +1,7 @@
 $secondary-color: #53657D;
 $bg-color: #1F2437;
-$redColor: rgba(244,67,54,1);
-$blueColor:rgba(33,150,243,1);
+$font-color: #fff;
+$border-color: #FF3E38;
+
+$FooterColor1: rgba(244,67,54,1);
+$FooterColor2:#2196f3;
