--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -260,9 +260,8 @@ body {
             &:after {
                 content: "";
                 position: absolute;
-                bottom: -195px;
-                left: 50%;
-                transform: translateX(-50%);
+                bottom: -200px;
+                left: 45%;
                 width: 10px;
                 height: 200px;
                 background: linear-gradient(#34A997,transparent);
@@ -289,18 +288,19 @@ body {
                 border-bottom: 2px solid $border-color;
             }
         }
-        p { 
+        &-text { 
             padding: 0 0 0 25px;
         }
     .container {
         position: relative;
         width: 100%;
         height: 500px;
+        z-index: 0;
         .card {
             position: absolute;
-            top: calc(55% - 200px);
+            top: 20%;
             left: 50%;
-            transform: translate(-50%,calc(100px * var(--i))) rotate(40deg) skew(-20deg,-10deg);
+            transform: translate(-50%,calc(90px * var(--i))) rotate(40deg) skew(-20deg,-10deg);
             width: 150px;
             height: 250px;
             background: $secondary-color;
@@ -308,7 +308,7 @@ body {
             justify-content: center;
             align-items: center;
             box-shadow: 25px 25px 100px rgba(0,0,0,0.2);
-            z-index: calc(0 * var(--i));
+            z-index: calc(-1 * var(--i));
             transition: 1s;
 
             &:nth-child(1) {
